--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ repository = "https://github.com/pureskillgg/makenew-pyskill"
 include = ['poetry.lock']
 
 [tool.poetry.dependencies]
-python = ">=3.9, <3.10"
+python = "^3.9"
 numpy = "^1.22.3"
 pandas = "^1.4.1"
-pureskillgg-dsdk = "^0.12.0"
+pureskillgg-dsdk = ">=0.14.0"
 python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
