--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ include = ['poetry.lock']
 python = "^3.9"
 numpy = "^1.22.3"
 pandas = "^1.4.1"
-pureskillgg-dsdk = ">=0.14.0"
 python-dotenv = "^0.20.0"
+pureskillgg-dsdk = "^0.19.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
