--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ repository = "https://github.com/pureskillgg/makenew-pyskill"
 include = ['poetry.lock']
 
 [tool.poetry.dependencies]
-python = ">=3.9, <3.10"
+python = "^3.9"
+numpy = "^1.22.3"
+pandas = "^1.4.1"
+python-dotenv = "^0.20.0"
+pureskillgg-dsdk = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
@@ -22,6 +26,8 @@ pytest-runner = "^6.0.0"
 pytest-watch = "^4.2.0"
 twine = "^3.0.0"
 wheel = "^0.34.0"
+matplotlib = "^3.5.1"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry>=1.0"]
