--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pandas = "^1.4.1"
 python-dotenv = "^0.20.0"
 pureskillgg-dsdk = ">=0.27.0"
 pureskillgg-csgo-dsdk = ">=0.8.0"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
