--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ python = "^3.9"
 numpy = "^1.22.3"
 pandas = "^1.4.1"
 python-dotenv = "^0.20.0"
-pureskillgg-dsdk = "^1.0.2b2"
-pureskillgg-csgo-dsdk = "^1.0.0b2"
 requests = "^2.27.1"
+pureskillgg-dsdk = "^1.2.0"
+pureskillgg-csgo-dsdk = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
